# IndieStudio

./: CMakeLists.txt  GameMenu.scheme  README.md  README.txt  README_CEGUI.txt  install_bullet.sh  install_staruml.sh  main.cpp
CeGui/fonts/: runic-mt-13.font  runic-mt-18.font  runic-mt-20.font
CeGui/imagesets/: MainMenu.imageset  Splashscreen.imageset  assassinLogo.imageset  valkyrieLogo.imageset  warriorLogo.imageset
CeGui/layouts/: Defeat.layout  GameHUD.layout  MainMenu.layout
CeGui/schemes/: Gauntlet.scheme  Generic.scheme
Install/: install.txt  install_indie  preliminaries  preminaries  resources.cfg
Install/cegui/.hg/: dirstate  hgrc  undo.desc
Install/cegui/.hg/cache/: branch2-served  hgtagsfnodes1  rbc-names-v1  (+2 more)
Install/ogre_build-master/: .travis.yml  README.md  before_deploy.sh  build.sh  install_dependencies.sh
assasin/: assasinMat.material
assasin/assasin/: R_knife.mesh  R_knife.skeleton  assasin.mesh  assasinMat.material
audio/sfx/player/: NOTES.txt
cmake/: FindCEGUI.cmake  FindOIS.cmake
gfx/CeGui/: Gauntlet.project
gfx/CeGui/fonts/: runic-mt-28.font
gfx/CeGui/imagesets/: Fantasy.imageset  MainMenuCursor.imageset  Menu.imageset  SplashScreen1.imageset  game_ui.imageset  life.imageset  priestLogo.imageset
gfx/CeGui/layouts/: GameHUD.layout  GameMenu.layout  HighScore.layout  MainMenu.layout  MainSelect.layout  PlayerSelect.layout  Settings.layout  SplashScreen.layout  Victory.layout
gfx/CeGui/schemes/: Gauntlet.scheme
gfx/model/assasin/: assasin.mesh  assasin.skeleton  knifeMat.material
gfx/model/balls/: R_knife.mesh  R_knife.skeleton  darkBall.mesh  darkBallMat.material  darkBallrIngMat.material  empty.mesh  emptyMat.material  lightBall.mesh  lightBall.skeleton  lightBallMat.material
gfx/model/boss/: boss.mesh  boss.skeleton  bossMat.material
gfx/model/chest/: chest.mesh  chest.skeleton  chestMat.material  lockMat.material
gfx/model/coin/: coin.mesh  coin.skeleton  coinMat.material
gfx/model/env/: Plane.mesh  crate.mesh  crateMat.material  groundMat.material  pilar.mesh  pilar1Mat.material  pilar2Mat.material  torch.mesh  torch1Mat.material  torch2Mat.material  torch3Mat.material  torch4Mat.material  vase.mesh  vaseMat.material  wall.mesh  wall.scene  wallMat.material
gfx/model/food/: food0.mesh  food0Mat.material  food1.mesh  food1.skeleton  food1Mat.material  food2.mesh  food2Mat.material  food3.mesh  food4.mesh  food4Mat.material  mat1.material
gfx/model/ghost/: MarineAngemon.mtl  Salamon.mtl  ghost.mesh  ghost.scene  ghost.skeleton  ghostMat.material
gfx/model/mini-boss/: Patamon.mtl
gfx/model/miniboss/: miniBoss.mesh  miniBoss.skeleton  miniBossMat.material
gfx/model/pig/: pig.mesh  pig.skeleton  pigMat.material  pigSwordMat.material
gfx/model/priest/: priest.mesh  priest.skeleton  priestMat.material  wandMat.material
gfx/model/valkyrie/: spearMat.material  valkyrie.mesh  valkyrie.skeleton  valkyrieMat.material  wing1Mat.material  wing2Mat.material
gfx/model/warrior/: swordMat.material  warrior.mesh  warrior.skeleton  warriorMat.material
include/: CoreGame.hpp  CustomMath.hpp
include/AI/: AI.hpp
include/Components/: AIScript.hpp  Animation.hpp  Components.hpp  EntityState.hpp  LightSource.hpp  Model.hpp  PowerUpStats.hpp  Sound.hpp  Stats.hpp  Weapon.hpp
include/Entity/: Entity.hpp
include/Entity/Character/: Assassin.hpp  Boss.hpp  Ghost.hpp  Hero.hpp  MiniBoss.hpp  Pig.hpp  Priest.hpp  Valkyrie.hpp  Warrior.hpp
include/Entity/Collectable/: Ananas.hpp  Coin.hpp  Donuts.hpp  Hamburger.hpp  Icecream.hpp  Meat.hpp
include/Entity/Destroyable/: Chest.hpp  Crate.hpp  Vase.hpp
include/Entity/Effect/: Attack.hpp  CaCAttack.hpp  DistAttack.hpp  HealAttack.hpp  ZoneDistAttack.hpp
include/Entity/Environement/: Ground.hpp  Torch.hpp  Wall.hpp
include/Event/: Event.hpp
include/Factory/: Factory.hpp  FactoryImplem.hpp
include/File/: ManageFile.hpp
include/Intro/: Intro.hpp
include/Menu/: EndGame.hpp  GameMenu.hpp  Hud.hpp  IMenu.hpp  MainMenu.hpp  MenuManager.hpp  SplashScreen.hpp
include/Movement/: MovementManager.hpp
include/RP/: RP.hpp
include/Systems/: System.hpp
include/Systems/Animation/: AnimationManager.hpp
include/Systems/Attack/: AttackManager.hpp
include/Systems/Collision/: CollisionBody.hpp  CollisionCallBack.hpp  CollisionConvertion.hpp  CollisionManager.hpp  CollisionObject.hpp  HitBox.hpp  OgreMotionState.hpp
include/Systems/Displayer/: Displayer.hpp  WindowManager.hpp
include/Systems/Input/: InputManager.hpp  KeyListener.hpp
include/Systems/Loot/: LootManager.hpp
include/Systems/Map/: MapLoader.hpp
include/Systems/Saving/: Saving.hpp
include/Systems/Sound/: SoundSystem.hpp
saving/: scores.txt
src/: CoreGame.cpp  CustomMath.cpp
src/AI/: AI.cpp
src/Animation/: AnimationManager.cpp
src/Attack/: AttackManager.cpp
src/Collision/: CollisionBody.cpp  CollisionCallBack.cpp  CollisionConvertion.cpp  CollisionManager.cpp  CollisionObject.cpp  HitBox.cpp  OgreMotionState.cpp
src/Components/: AIScript.cpp  Animation.cpp  EntityState.cpp  LightSource.cpp  Model.cpp  PowerUpStats.cpp  Stats.cpp  Weapon.cpp
src/Displayer/: Displayer.cpp  WindowManager.cpp
src/Entity/: Entity.cpp
src/Entity/Character/: Assassin.cpp  Boss.cpp  Ghost.cpp  MiniBoss.cpp  Pig.cpp  Priest.cpp  Valkyrie.cpp  Warrior.cpp
src/Entity/Collectable/: Ananas.cpp  Coin.cpp  Donuts.cpp  Hamburger.cpp  Icecream.cpp  Meat.cpp
src/Entity/Destroyable/: Chest.cpp  Crate.cpp  Vase.cpp
src/Entity/Effect/: Attack.cpp  CaCAttack.cpp  DistAttack.cpp  HealAttack.cpp  ZoneDistAttack.cpp
src/Entity/Environement/: Ground.cpp  Torch.cpp  Wall.cpp
src/Event/: Event.cpp
src/Factory/: Factory.cpp
src/File/: ManageFile.cpp
src/Input/: InputManager.cpp  KeyListener.cpp
src/Intro/: Intro.cpp
src/Loot/: LootManager.cpp
src/Map/: MapLoader.cpp
src/Menu/: EndGame.cpp  GameMenu.cpp  Hud.cpp  IMenu.cpp  MainMenu.cpp  MenuManager.cpp  SplashScreen.cpp
src/Movement/: MovementMgr.cpp
src/RP/: RP.cpp
src/Saving/: Saving.cpp
src/Sound/: Sound.cpp
src/Systems/: SoundSystem.cpp
(+6739 files in other folders)
